@@ -1,3 +1,8 @@
+2014-04-02  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
+	PR tree-optimization/60733
+	* gcc.dg/torture/pr60733.c:  New test.
+
 2014-04-02  Vladimir Makarov  <vmakarov@redhat.com>
 
 	PR rtl-optimization/60650
